--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
     <%= render partial: 'layouts/header' %>
 
     <div class="container">
+      <!-- 
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+
+      -->
+
       <%= yield %>
     </div>
     
