created products resource

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,43 +1,40 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
     <div class="container">
 
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/"> كوفي شوب </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/"> الرئيسيه  <span class="sr-only">(current)</span></a>
             </li>
+
             <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+                <%= link_to 'المنتجات', products_path, class: 'nav-link' %>
             </li>
+
             <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <%= link_to 'اضافه منتج', new_product_path, class: 'nav-link' %>
             </li>
         </ul>
 
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav mr-auto">
             <% if user_signed_in? %>
-                <li class="nav-item">
-                   <%= link_to current_user.name.capitalize,'', class: 'btn', disables: true %> 
-                </li>
+                
 
                 <li class="nav-item">
-                    <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-info border border-light' %>
+                    <%= link_to 'تسجيل خروج', destroy_user_session_path, method: :delete, class: 'btn btn-info border border-light' %>
                 </li>
 
             <% else %>
                 <li class="nav-item mr-1">
-                    <%= link_to 'Login', new_user_session_path, class: 'btn btn-success border border-light' %>
+                    <%= link_to 'تسجيل دخول', new_user_session_path, class: 'btn btn-success border border-light' %>
                 </li>
 
                 <li class="nav-item">
-                    <%= link_to 'Register', new_user_registration_path, class: 'btn btn-primary border border-light' %>
+                    <%= link_to 'انشاء حساب', new_user_registration_path, class: 'btn btn-primary border border-light' %>
                 </li>
             <% end %>
         </ul>
