--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,14 @@
             <li class="nav-item">
                 <%= link_to 'اضافه منتج', new_product_path, class: 'nav-link' %>
             </li>
+
+            <li class="nav-item">
+                <%= link_to 'اضافه اوردر', new_order_path, class: 'nav-link' %>
+            </li>
+
+            <li class="nav-item">
+                <%= link_to 'الاوردرات', orders_path, class: 'nav-link' %>
+            </li>
         </ul>
 
         <ul class="navbar-nav mr-auto">
