--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -34,6 +34,8 @@
         </p>
     </div>
 
+    <%# select_tag 'status', options_for_select([['waiting', '1'], ['being prepared', '2']]) %>
+
     <p class="text-right">
         <%= f.submit action, class: 'btn btn-success' %>
     </p>
