--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -12,7 +12,7 @@
             <div class="col-md-11">
                 <div class="form-group">
                 
-                    <%= f.text_field :name, class: 'form-control', placeholder: 'اسم الاوردر' %>
+                    <%= f.text_field :name, class: 'form-control', placeholder: 'اسم الاوردر', autofocus: true %>
                 </div>
             </div>
             <div class="col-md-1">
